--- a/demos/main.ipynb
+++ b/demos/main.ipynb
@@ -9,38 +9,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: matplotlib in /home/pbizopoulos/.local/lib/python3.8/site-packages (3.3.3)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from matplotlib) (8.0.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /usr/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3.8/site-packages (from matplotlib) (2.8.1)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from matplotlib) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from matplotlib) (8.0.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /usr/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: numpy>=1.15 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from matplotlib) (1.19.4)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib) (1.15.0)\n",
+      "Requirement already satisfied: six in /usr/lib/python3.8/site-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: segmentation_models_pytorch in /home/pbizopoulos/.local/lib/python3.8/site-packages (0.1.2)\n",
-      "Requirement already satisfied: efficientnet-pytorch==0.6.3 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from segmentation_models_pytorch) (0.6.3)\n",
       "Requirement already satisfied: torchvision>=0.3.0 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from segmentation_models_pytorch) (0.8.1)\n",
       "Requirement already satisfied: timm==0.1.20 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from segmentation_models_pytorch) (0.1.20)\n",
+      "Requirement already satisfied: efficientnet-pytorch==0.6.3 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from segmentation_models_pytorch) (0.6.3)\n",
       "Requirement already satisfied: pretrainedmodels==0.7.4 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from segmentation_models_pytorch) (0.7.4)\n",
-      "Requirement already satisfied: torch in /home/pbizopoulos/.local/lib/python3.8/site-packages (from efficientnet-pytorch==0.6.3->segmentation_models_pytorch) (1.7.0)\n",
-      "Requirement already satisfied: pillow>=4.1.1 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torchvision>=0.3.0->segmentation_models_pytorch) (8.0.1)\n",
       "Requirement already satisfied: numpy in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torchvision>=0.3.0->segmentation_models_pytorch) (1.19.4)\n",
-      "Requirement already satisfied: munch in /home/pbizopoulos/.local/lib/python3.8/site-packages (from pretrainedmodels==0.7.4->segmentation_models_pytorch) (2.5.0)\n",
+      "Requirement already satisfied: pillow>=4.1.1 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torchvision>=0.3.0->segmentation_models_pytorch) (8.0.1)\n",
+      "Requirement already satisfied: torch==1.7.0 in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torchvision>=0.3.0->segmentation_models_pytorch) (1.7.0)\n",
       "Requirement already satisfied: tqdm in /home/pbizopoulos/.local/lib/python3.8/site-packages (from pretrainedmodels==0.7.4->segmentation_models_pytorch) (4.52.0)\n",
-      "Requirement already satisfied: typing-extensions in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torch->efficientnet-pytorch==0.6.3->segmentation_models_pytorch) (3.7.4.3)\n",
-      "Requirement already satisfied: future in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torch->efficientnet-pytorch==0.6.3->segmentation_models_pytorch) (0.18.2)\n",
-      "Requirement already satisfied: dataclasses in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torch->efficientnet-pytorch==0.6.3->segmentation_models_pytorch) (0.6)\n",
+      "Requirement already satisfied: munch in /home/pbizopoulos/.local/lib/python3.8/site-packages (from pretrainedmodels==0.7.4->segmentation_models_pytorch) (2.5.0)\n",
+      "Requirement already satisfied: dataclasses in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torch==1.7.0->torchvision>=0.3.0->segmentation_models_pytorch) (0.6)\n",
+      "Requirement already satisfied: typing-extensions in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torch==1.7.0->torchvision>=0.3.0->segmentation_models_pytorch) (3.7.4.3)\n",
+      "Requirement already satisfied: future in /home/pbizopoulos/.local/lib/python3.8/site-packages (from torch==1.7.0->torchvision>=0.3.0->segmentation_models_pytorch) (0.18.2)\n",
       "Requirement already satisfied: six in /usr/lib/python3.8/site-packages (from munch->pretrainedmodels==0.7.4->segmentation_models_pytorch) (1.15.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install matplotlib\n",
-    "%pip install segmentation_models_pytorch\n",
+    "%pip install --user matplotlib\n",
+    "%pip install --user segmentation_models_pytorch\n",
     "\n",
     "import torch\n",
     "import numpy as np\n",
@@ -94,12 +92,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = Image.open('./web-app/covid-19-pneumonia-4.jpg')\n",
+    "image = Image.open('./covid-19-pneumonia-4.jpg')\n",
     "image = np.asarray(image)\n",
-    "experiment_name = 'lesion-segmentation-a'\n",
-    "architecture_name = 'PSPNet'\n",
-    "encoder = 'mobilenet_v2'\n",
-    "encoder_weights = 'imagenet'\n",
+    "experiment_name = 'lesion-segmentation-a' # or 'lung-segmentation'\n",
+    "architecture_name = 'PSPNet' # or any of 'Unet', 'Linknet', 'FPN'\n",
+    "encoder = 'mobilenet_v2' # or any of 'vgg11', 'vgg13', 'vgg19', 'resnet18', 'resnet34', 'resnet50', 'resnet101', 'resnet152', 'densenet121', 'densenet161', 'densenet169', 'densenet201', 'resnext50_32x4d', 'dpn68', 'dpn98', 'mobilenet_v2', 'xception', 'inceptionv4', 'efficientnet-b0', 'efficientnet-b1', 'efficientnet-b2', 'efficientnet-b3', 'efficientnet-b4', 'efficientnet-b5', 'efficientnet-b6'\n",
+    "encoder_weights = 'imagenet' # or 'None'\n",
     "prediction = predict(image, experiment_name, architecture_name, encoder, encoder_weights)"
    ]
   },
@@ -111,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f84040d23d0>"
+       "<matplotlib.image.AxesImage at 0x7f185fbbc430>"
       ]
      },
      "execution_count": 4,
