--- a/ms.tex
+++ b/ms.tex
@@ -508,6 +508,6 @@ We demonstrate specific properties that increase model segmentation and help exp
 This work received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 875325 (TeNDER, affecTive basEd iNtegrateD carE for betteR Quality of Life).
 
 \bibliographystyle{elsarticle-num}
-\bibliography{ms}
+\bibliography{ms.bib}
 
 \end{document}
