--- a/ms.tex
+++ b/ms.tex
@@ -32,7 +32,7 @@
 \author[1]{Nicholas Vretos}
 \author[1]{Petros Daras}
 
-\address[1]{Visual Computing Lab of the Information Technologies Institute, Centre for Research and Technology Hellas, Thessaloniki, Greece e-mail: \{pbizopoulos,vretos,daras\}@iti.gr}
+\address[1]{Visual Computing Lab of the Information Technologies Institute, Centre for Research and Technology Hellas, Thessaloniki, Greece e-mail: pbizopoulos@protonmail.com,\{vretos,daras\}@iti.gr}
 
 \begin{abstract}
 	Deep Learning (DL) methods are extensively used for medical image segmentation.
