--- a/README
+++ b/README
@@ -13,16 +13,8 @@ Preparation:
 2. cd comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 3. sudo systemctl start docker
 
-Usage:
-make				# Generate draft (fast) results.
-make FULL=1	 		# Generate full (slow) results.
-make tmp/python-coverage 	# Code coverage for main.py.
-make tmp/python-format 		# Format main.py.
-make clean 			# Remove tmp/ directory.
-make tmp/ms.pdf		 	# Generate document.
-make tmp/texlive-lint 		# Lint ms.tex.
-make tmp/texlive-test 		# Test document reproducibility.
-make tmp/texlive-update 	# Update texlive docker image.
-make tmp/arxiv-download.pdf	# Generate document from arxiv.
-make tmp/arxiv-upload.tar	# Generate tar for arxiv.
-make index.html			# Generate index.html for app.
+Basic usage:
+make		# Generate draft (fast) results.
+make FULL=1	# Generate full (slow) results.
+make clean 	# Remove tmp/ directory.
+make help	# Show help.
