--- a/README
+++ b/README
@@ -15,7 +15,7 @@ cd comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion
 sudo systemctl start docker
 
 Basic commands:
-make		# Generate draft (fast) results.
-make FULL=1	# Generate full (slow) results.
-make clean 	# Remove tmp/ directory.
+make		# Generate draft artifacts (fast).
+make FULL=1	# Generate full artifacts (slow).
+make clean 	# Remove artifacts/ directory.
 make help	# Show basic/advanced commands.
