posix compliance shell as requirement

--- a/README
+++ b/README
@@ -3,9 +3,9 @@ Comprehensive Comparison of Deep Learning Models for Lung and COVID-19 Lesion Se
 - https://pbizopoulos.github.io/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 
 Requirements:
-- POSIX-oriented operating system
+- POSIX compliant shell (any of Bash, Dash, KornShell, Yash, Zsh)
 - Git (Any version)
-- GNU Make (>= 3.79)
+- Make (bmake or GNU Make)
 - Docker (Any version or >= 19.03 for NVIDIA Container Toolkit)
 - [Optional] NVIDIA Container Toolkit
 
